--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "fanfan-time",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "pinia": "^3.0.4",
-    "sass": "^1.96.0",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
-  },
-  "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4",
-    "vue-tsc": "^3.1.4"
-  }
+	"name": "fanfan-time",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc -b && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@iconify/vue": "^5.0.0",
+		"motion-v": "^1.7.4",
+		"pinia": "^3.0.4",
+		"sass": "^1.96.0",
+		"vue": "^3.5.24",
+		"vue-router": "^4.6.3"
+	},
+	"devDependencies": {
+		"@types/node": "^24.10.1",
+		"@vitejs/plugin-vue": "^6.0.1",
+		"@vue/tsconfig": "^0.8.1",
+		"axios": "^1.13.2",
+		"jsrepo": "^3.0.8",
+		"typescript": "~5.9.3",
+		"vite": "^7.2.4",
+		"vue-tsc": "^3.1.4"
+	}
 }
