feat: 更新开发环境配置及多个组件样式优化
- 修改 .env.development 配置，调整 API 地址和上传路径。
- 更...

--- a/.env.development
+++ b/.env.development
@@ -4,11 +4,11 @@ VITE_USE_MOCK = true
 # 公共路径
 VITE_PUBLIC_PATH = /
 
-# 基础接口地址 - 开发环境用本地地址
-VITE_GLOB_API_URL = http://localhost:3000
+# 基础接口地址 - 开发环境使用空字符串，让mock拦截
+VITE_GLOB_API_URL = 
 
 # 文件上传地址
-VITE_GLOB_UPLOAD_URL = http://localhost:3000/upload
+VITE_GLOB_UPLOAD_URL = /upload
 
 # 接口前缀 - 开发环境建议为空，直接访问
 VITE_GLOB_API_URL_PREFIX =
