--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
 		"eslint-plugin-vue": "^10.6.2",
 		"globals": "^16.5.0",
 		"jsrepo": "^3.0.8",
+		"mockjs": "^1.1.0",
 		"prettier": "^3.7.4",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.49.0",
 		"vite": "^7.2.4",
+		"vite-plugin-mock": "^3.0.2",
 		"vue-eslint-parser": "^10.2.0",
 		"vue-tsc": "^3.1.4"
 	}
