--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ VITE_USE_MOCK = true
 VITE_PUBLIC_PATH = /
 
 # 基础接口地址 - 开发环境使用空字符串，让mock拦截
-VITE_GLOB_API_URL = 
+VITE_GLOB_API_URL =http://localhost:3000/
 
 # 文件上传地址
 VITE_GLOB_UPLOAD_URL = /upload
