--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH = /
 VITE_BUILD_COMPRESS = 'gzip'
 
 # 基础接口地址 - 生产环境用相对路径
-VITE_GLOB_API_URL = /api
+VITE_GLOB_API_URL = /nest
 
 # 文件上传地址 - 通过nginx转发
 VITE_GLOB_UPLOAD_URL = /upload
