--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+.env.development
 .env
+.env.production
 .trae
 .shared
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
