--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@iconify/vue": "^5.0.0",
 		"motion-v": "^1.7.4",
 		"pinia": "^3.0.4",
+		"qiniu-js": "^3.4.3",
 		"sass": "^1.96.0",
 		"vue": "^3.5.24",
 		"vue-router": "^4.6.3"
